SFDCGitProject/src/objects/Voter_Donation__c.object
<CustomObject>
    <fields>
        <fullName>Amount__c</fullName>
        <label>Amount</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Candidate_Name__c</fullName>
        <label>Candidate Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Donation_Date__c</fullName>
        <label>Donation Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Voter__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Voter</label>
        <referenceTo>Voter__c</referenceTo>
        <relationshipLabel>Voter Donations</relationshipLabel>
        <relationshipName>Voter_Donations</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Voter Donation</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>DN-{00000}</displayFormat>
        <label>DonationId</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Voter Donations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>